[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmembase"
version = "1.0.0"
description = "Enterprise Unified Memory Database"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CoPaw", email = "copaw@example.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "lancedb>=0.29.0",
    "numpy>=1.20.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
openmembase = "openmembase.cli:cli_main"

[project.urls]
Homepage = "https://github.com/copaw/openmembase"
Repository = "https://github.com/copaw/openmembase"
Documentation = "https://github.com/copaw/openmembase#readme"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
